<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/padding_regular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="xyz.gitsieg.justdesserts.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/heading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dog_orderer"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular"/>


    <TextView
        android:id="@+id/order_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order icon now! Delivery within 99999999 hours!"
        android:padding="@dimen/padding_regular"
        android:layout_below="@id/heading_text"/>

    <ImageButton
        android:onClick="showCircularOrder"
        android:id="@+id/img_circular"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:scaleType="fitCenter"
        android:layout_below="@id/order_now"
        android:padding="@dimen/padding_regular"
        android:layout_margin="@dimen/padding_regular"
        android:src="@drawable/circular_thingy"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/circular_desirable"/>

    <TextView
        android:id="@+id/circular_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circular_desirable"
        android:layout_toEndOf="@id/img_circular"
        android:layout_alignBottom="@id/img_circular"
        android:layout_alignTop="@id/img_circular"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_regular"/>

    <ImageButton
        android:onClick="showEyeOrder"
        android:id="@+id/egypt_eye"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:scaleType="fitCenter"
        android:layout_below="@id/img_circular"
        android:padding="@dimen/padding_regular"
        android:layout_margin="@dimen/padding_regular"
        android:src="@drawable/egypt_eye_scaled"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/eye_desirable"/>

    <TextView
        android:id="@+id/egypt_eye_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eye_desirable"
        android:layout_toEndOf="@id/egypt_eye"
        android:layout_alignBottom="@id/egypt_eye"
        android:layout_alignTop="@id/egypt_eye"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_regular"/>

    <ImageButton
        android:onClick="showGearOrder"
        android:id="@+id/gear"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:scaleType="fitCenter"
        android:layout_below="@id/egypt_eye"
        android:padding="@dimen/padding_regular"
        android:layout_margin="@dimen/padding_regular"
        android:src="@drawable/gear"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/gear_desirable"/>

    <TextView
        android:id="@+id/gear_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gear_desirable"
        android:layout_toEndOf="@id/gear"
        android:layout_alignBottom="@id/gear"
        android:layout_alignTop="@id/gear"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_regular"/>

</RelativeLayout>
